# casino-sol

./: .gitkeep  .replit  APP_DESCRIPTION.md  ARCHITECTURE.md  Anchor.toml  BETA_READINESS_AND_MISSING.md  BUILD_AND_DEPLOY.md  BUYBACK.md  ERRORS_AND_LAUNCH_CHECKLIST.md  ERROR_HISTORY_AND_FIXES.md  LAUNCH_CHECKLIST.md  MAINNET_READINESS.md  PUMPFUN_INTEGRATION_SUMMARY.md  README.md  errors-and-fixes.md  package-lock.json  package.json  replit.md
app/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
app/scripts/: dedupe-frontend.mjs
app/src/: App.tsx  index.css  main.tsx
app/src/audio/: audioManager.ts
app/src/components/: AudioToggle.tsx  BuybackControlPanel.tsx  BuybackPanel.tsx  CasinoInfo.tsx  CasinoLobby.tsx  CoinFlip.tsx  Dice.tsx  GameRoundModal.tsx  InitializeCasino.tsx  Leaderboard.tsx  OperatorPanel.tsx  SessionList.tsx  Slots.tsx  WalletActivateCard.tsx  WalletProvider.tsx
app/src/hooks/: useBet.ts  useCasino.ts  useClaimPayout.ts  useDrainVault.ts  (+7 more)
programs/casino/: Cargo.toml  Cargo.toml.playground  DEPLOYMENT.md
programs/casino/src/: errors.rs  lib.rs
programs/casino/src/instructions/: claim_payout.rs  fulfill_randomness.rs  initialize.rs  mod.rs  place_bet.rs  refund_expired.rs  skim_excess_to_treasury.rs
programs/casino/src/state/: casino.rs  game.rs  mod.rs  player.rs  session.rs
programs/casino/src/utils/: mod.rs
server/: .env  ENV_VARIABLES.md  docker-compose.yml  oracle-service.ts  package-lock.json  package.json  test-webhook.sh  tsconfig.json
server/src/: index-simple.ts  index.ts
(+52 files in other folders)
